chore: fix some spacing

--- a/src/page-contents/app-page/app-page.module.css
+++ b/src/page-contents/app-page/app-page.module.css
@@ -24,7 +24,7 @@
   justify-content: space-between;
   flex-direction: column;
 
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 
 .nav {
